springBoot commit end

--- a/其他/常用技术.md
+++ b/其他/常用技术.md
@@ -564,3 +564,58 @@ public class TUser {
     }
 ```
 
+## 5.富文本编辑器收藏
+
+市面上有许多非常成熟的富文本编辑器，比如：
+
+1. **Editor.md**——功能非常丰富的编辑器，左端编辑，右端预览，非常方便，完全免费
+
+   - 官网：https://pandao.github.io/editor.md/
+
+2. **wangEditor**——基于javascript和css开发的 Web富文本编辑器， 轻量、简洁、界面美观、易用、开源免费。
+
+3. - 官网：http://www.wangeditor.com/
+
+4. **TinyMCE**——TinyMCE是一个轻量级的基于浏览器的所见即所得编辑器，由JavaScript写成。它对IE6+和Firefox1.5+都有着非常良好的支持。功能齐全，界面美观，就是文档是英文的，对开发人员英文水平有一定要求。
+
+5. - 官网：https://www.tiny.cloud/docs/demo/full-featured/
+   - 博客园
+
+6. **百度ueditor**——UEditor是由百度web前端研发部开发所见即所得富文本web编辑器，具有轻量，功能齐全，可定制，注重用户体验等特点，开源基于MIT协议，允许自由使用和修改代码，缺点是已经没有更新了
+
+7. - 官网：https://ueditor.baidu.com/website/onlinedemo.html
+
+8. **kindeditor**——界面经典。
+
+9. - 官网：http://kindeditor.net/demo.php
+
+10. **Textbox**——Textbox是一款极简但功能强大的在线文本编辑器，支持桌面设备和移动设备。主要功能包含内置的图像处理和存储、文件拖放、拼写检查和自动更正。此外，该工具还实现了屏幕阅读器等辅助技术，并符合WAI-ARIA可访问性标准。
+
+11. - 官网：https://textbox.io/
+
+12. **CKEditor**——国外的，界面美观。
+
+13. - 官网：https://ckeditor.com/ckeditor-5/demo/
+
+14. **quill**——功能强大，还可以编辑公式等
+
+15. - 官网：https://quilljs.com/
+
+16. **simditor**——界面美观，功能较全。
+
+17. - 官网：https://simditor.tower.im/
+
+18. **summernote**——UI好看，精美
+
+19. - 官网：https://summernote.org/
+
+20. **jodit**——功能齐全
+
+21. - 官网：https://xdsoft.net/jodit/
+
+22. **froala Editor**——界面非常好看，功能非常强大，非常好用（非免费）
+
+23. - 官网：https://www.froala.com/wysiwyg-editor
+
+> 这里收藏一份地址是针对第一个富文本编辑器的示例:https://mp.weixin.qq.com/s?__biz=Mzg2NTAzMTExNg==&mid=2247483924&idx=1&sn=8570554261d1829439eb8ecceabd1fe4&scene=19#wechat_redirect
+
