--- a/Redis/笔记.md
+++ b/Redis/笔记.md
@@ -2219,3 +2219,151 @@ public class TestTx {
 可以发现一旦编译时发生异常,抛出了异常那么,整个事务都会被取消执行失败!
 
 而我们后面实现乐观锁也是一样的,我们只需要加一个`jedis.watch(xxx)`即可!
+
+## 6.Redis.config
+
+这里是介绍Redis在启动的时候是如何进行启动的,而通过它的配置文件,我们来了解一下具体的使用:
+
+我们学东西,如果你只会上面的那些基本的东西,那么你压根不能懂Redis!而这配置文件里的东西才是我们需要去了解的!通过这个配置文件我们就能redis几乎所有的功能!
+
+我们打开Redis所在的目录下的配置文件,比如我这里的是`redis.windows.conf`打开进行解析:
+
+> 单位:
+
+```properties
+# Redis configuration file example
+
+# Note on units: when memory size is needed, it is possible to specify
+# it in the usual form of 1k 5GB 4M and so forth:
+# 这里是默认的一些单位设置!
+# 1k => 1000 bytes
+# 1kb => 1024 bytes
+# 1m => 1000000 bytes
+# 1mb => 1024*1024 bytes
+# 1g => 1000000000 bytes
+# 1gb => 1024*1024*1024 bytes
+#
+# units are case insensitive so 1GB 1Gb 1gB are all the same. 这里翻译:这里对大小写不敏感,也就是说你可以写1GB,也可以写1gb....
+这里是Redis的默认的一些配置,
+################################## INCLUDES ###################################
+```
+
+1. 配置文件unit单位,对大小写不敏感
+
+> 包含:
+
+```properties
+################################## INCLUDES ###################################
+
+# Include one or more other config files here.  This is useful if you
+# have a standard template that goes to all Redis servers but also need
+# to customize a few per-server settings.  Include files can include
+# other files, so use this wisely.
+#
+# Notice option "include" won't be rewritten by command "CONFIG REWRITE"
+# from admin or Redis Sentinel. Since Redis always uses the last processed
+# line as value of a configuration directive, you'd better put includes
+# at the beginning of this file to avoid overwriting config change at runtime.
+#
+# If instead you are interested in using includes to override configuration
+# options, it is better to use include as the last line.
+#
+# include .\path\to\local.conf
+# include c:\path\to\other.conf
+```
+
+就是好比我们学习Spring的时候import,或者JSP中的include,这里意思就是可以把多个配置文件都配置过来!
+
+> 网络:
+
+```bash
+################################## NETWORK #####################################
+# ... 这里我省略其他,直接看核心
+bind 127.0.0.1		//绑定的ip
+protected-mode yes  //表示是否是受保护的模式,一般都是开启的,保证安全性的!
+port 6379			//绑定的端口 
+```
+
+> 通用配置:
+
+```bash
+################################# GENERAL #####################################
+# ... 这里我省略其他,直接看核心
+daemonize yes    # 表示是否以守护进程开启,默认为no,我们需要自己开启为yes!就是退出还在后台运行!
+supervised no	 # 这个就是管理守护线程的,不用去动
+pidfile /var/run/redis.pid # 如果以后台的方式运行,我们就需要指定一个pid文件!
+
+# 日志
+# Specify the server verbosity level.
+# This can be one of:
+# debug (a lot of information, useful for development/testing)  //这里位debug,一般用于测试和开发阶段!
+# verbose (many rarely useful info, but not a mess like the debug level) //这里就是记录较多的日志信息.一般不用去看
+# notice (moderately verbose, what you want in production probably)	//通知,部分的重要的日志信息.仅使用与生产环境使用!
+# warning (only very important / critical messages are logged)	//警告信息.关键的信息!
+loglevel notice
+logfile ""  # 日志的文件位置名,如果为空,那么就标准的输出了!
+databases 16  # 数据库数量,默认的是16个数据库
+always-show-Logo yes  # 是否显示这个logo,就是我们开启Redis服务的时候显示的那个logo
+```
+
+> 快照(后面持久化会用到,就是在规定的时间内,执行了多少次操作,则会持久化到文件 .rdb aof):
+
+```bash
+################################ SNAPSHOTTING  ################################
+# save: 在当下执行了多少时间怎样去保存这个规则->这是个持久化规则
+# Redis是一个内存式数据库,如果不持久化的话就会丢失数据,因为内存是断电即失!
+save 900 1 		# 如果900秒内也就是15分钟,如果至少一个key进行了修改,那么这个时候我们就进行持久化操作!
+save 300 10		# 假设300秒内,至少10个key进行修改,那么这个时候我们就进行持久化操作!
+save 60 10000	# 假设60秒内,至少10000个key被进行修改,那么就会执行持久化操作,这种就是高并发的情况下!
+
+stop-writes-on-bgsave-error yes  	# 如果持久化的时候出现错误,是否还继续工作,默认是开启
+rdbcompression yes					# 是否压缩我们的rdb文件,默认是开启,压缩的话就会消耗一些CPU资源,而rdb文件就是持久化的文件
+rdbchecksum yes						# 在保存rdb文件的时候,就会去校验我们的rdb文件,如果出错了自动去做一些操作修复!
+dir ./								# rdb文件保存的目录!
+```
+
+> 安全
+
+```bash
+################################## SECURITY ###################################
+requirepass 123456		# 设置redis密码,默认是为空,一般我们推荐使用命令行设置命令
+```
+
+密码的话我们也可以进行设置,当然默认为空,那我们在cmd中查看用户密码那如何查看呢?
+
+```bash
+127.0.0.1:6379> config get requirepass					# 获取redis密码
+1) "requirepass"
+2) ""
+127.0.0.1:6379> config set requirepass "123456"			# 设置redis密码
+OK
+127.0.0.1:6379> config get requirepass					# 设置后我们就能看到必须要登录,否则就没用权限,不然我们所有的命令都无法使用!
+(error) NOAUTH Authentication required.
+127.0.0.1:6379>  config get requirepass
+(error) NOAUTH Authentication required.
+127.0.0.1:6379> ping
+(error) NOAUTH Authentication required.					# 验证密码
+127.0.0.1:6379> auth 123456
+OK
+127.0.0.1:6379>  config get requirepass					# 获取密码就可以看到了!
+1) "requirepass"
+2) "123456"
+```
+
+> 客户端限制
+
+```bash
+################################### LIMITS ####################################
+
+# Set the max number of connected clients at the same time. By default
+# this limit is set to 10000 clients, however if the Redis server is not
+# able to configure the process file limit to allow for the specified limit
+# the max number of allowed clients is set to the current file limit
+# minus 32 (as Redis reserves a few file descriptors for internal uses).
+#
+# Once the limit is reached Redis will close all the new connections sending
+# an error 'max number of clients reached'.
+#
+# maxclients 10000
+```
+
