--- a/spring Boot/简述和相关原理.md
+++ b/spring Boot/简述和相关原理.md
@@ -1578,3 +1578,218 @@ public class SpringbootTest {
 - MANDATORY : 支持当前事务，如果当前没有事务，则抛出异常
 - NOT_SUPPORTED ：不运势当前事务,如果当前存在事务，则把事务挂起
 - NESTED ：支持当前事务，如果事务存在，则执行一个嵌套事务，如果事务不存在，就新建一个事务
+
+## 12.跨域
+
+**概念**:跨域是指跨域名,域名:记忆网络电脑ip很难记,就给它取了一个名字来记忆,这个名字就要域名,域名最终要被转换为ip.
+
+比如:[www.baidu.com](http://www.baidu.com)被解析为IP地址就是185.15.15.14
+
+> 跨域是指跨域名的访问,从一个域名的系统去访问另一个域名系统，以下情况都属于跨域
+
+注意:域名是指IP+端口组成的!
+
+![image-20211021111906032](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211021111906032.png)
+
+> 只要是你域名或者端口不是一样那么就是跨域!
+
+### 12.1 跨域问题
+
+> 跨域不一定会有跨域问题!
+
+因为跨域问题是浏览器`对于ajax请求的一种安全限制`：一个页面发起的ajax请求，只能是于当前页同域名的路径，这能有效的阻止跨站攻击。
+
+因此:跨域问题就是浏览器针对ajax异步请求的一种限制!!
+
+### 12.3 解决方案
+
+目前比较常用的跨域解决方案有3种：
+
+1. Json--json
+
+   ```javascript
+   最早的解决方案，利用动态去填充script标签可以跨域的原理实现
+   <sccipt src=”http:/wwww/ssss”> --处理
+   限制：
+     - 需要服务的支持
+     - 只能发起GET请求
+   ```
+
+2. nginx反向代理(部署)
+
+   ```
+   思路是：利用nginx反向代理把跨域为不跨域，支持各种请求方式
+   缺点：需要在nginx进行额外配置，语义不清晰 --
+   ```
+
+   ![image-20211021115444368](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211021115444368.png)
+
+3. CORS
+
+   ```
+   规范化的跨域请求解决方案，安全可靠。
+   优势：
+     - 在服务端进行控制是否允许跨域，可自定义规则
+     - 支持各种请求方式
+     缺点：
+     - 会产生额外的请求,要做询问
+   ```
+
+### 12.4 CORS解决
+
+概念:CORS是一个W3C标准，全称是"跨域资源共享"（Cross-origin resource sharing）。它允许浏览器向跨源服务器，发出XMLHttpRequest请求，从而克服了AJAX只能同源使用的限制。
+
+CORS需要`浏览器`和`服务器`同时支持。目前，所有浏览器都支持该功能，IE浏览器不能低于IE10。
+
+1. 浏览器
+   - 目前，所有浏览器都支持该功能（IE10以下不行）。整个CORS通信过程，都是浏览器**自动完成**，不需要用户参与。
+2. 服务器
+   -  CORS通信与AJAX没有任何差别，因此你不需要改变以前的业务逻辑。只不过，浏览器会在请求中携带一些头信息，我们需要以此判断是否运行其跨域，然后在响应头中加入一些信息即可。这一般通过过滤器完成即可
+
+### 12.5 原理
+
+浏览器会将ajax请求分为两类，其处理方案略有差异：**简单请求**、**特殊请求**。
+
+#### 1.简单请求
+
+```bash
+只要同时满足以下两大条件,就属于简单请求:
+(1)请求方法以下三种方法之一:
+	1.HEAD
+	2.GET
+	3.POST
+(2)HTTP的头信息不超过以下几种字段:
+	- Accept
+	- Accept-Language
+	- Content-Language
+	- Last-Event-ID
+	- Content-Type：只限于三个值application/x-www-form-urlencoded、multipart/form-data、text/plain
+```
+
+当浏览器发现发现的ajax请求是简单请求时，会在请求头中携带一个字段：Origin:
+
+![image-20211022111759109](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211022111759109.png)
+
+Origin中会指出当前请求属于哪个域（协议+域名+端口）。服务会根据这个值决定是否允许其跨域。如果服务器允许跨域，需要在返回的响应头中携带下面信息：
+
+![image-20211022111844878](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211022111844878.png)
+
+其中:
+
+- Access-Control-Allow-Origin:可接受的域，是一个具体域名或者*，代表任意
+- Access-Control-Allow-Credentials:是否允许携带cookie，默认情况下，cors不会携带cookie，除非这个值是true
+
+#### 2.特殊请求
+
+不符合简单请求的条件，会被浏览器判定为特殊请求,，例如请求方式为PUT。
+
+这里介绍一个名词"预检请求"
+
+> ​	特殊请求会在正式通信之前，增加一次HTTP查询请求，称为"预检"请求（preflight）。浏览器先询问服务器，当前网页所在的域名是否在服务器的许可名单之中，以及可以使用哪些HTTP动词和头信息字段。只有得到肯定答复，浏览器才会发出正式的XMLHttpRequest请求，否则就报错。
+
+一个“预检”请求的样板：
+
+​	![image-20211022112157566](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211022112157566.png)
+
+与简单请求相比，除了Origin以外，多了两个头：
+
+- Access-Control-Request-Method：接下来会用到的请求方式，比如PUT
+- Access-Control-Request-Headers：会额外用到的头信息
+
+预检请求的响应:
+
+​	服务的收到预检请求，如果许可跨域，会发出响应：
+
+![image-20211022112258191](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211022112258191.png)
+
+除了Access-Control-Allow-Origin和Access-Control-Allow-Credentials以外，这里又额外多出3个头：
+
+- Access-Control-Allow-Methods：允许访问的方式
+- Access-Control-Allow-Headers：允许携带的头
+- Access-Control-Max-Age：本次许可的有效时长，单位是秒，过期之前的ajax请求就无需再次进行预检了询问-支持源地址跨域真实请求
+
+![image-20211022112414410](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211022112414410.png)
+
+### 12.6 跨域解决方案
+
+#### 1.后台解决
+
+虽然原理比较复杂，但是前面说过：
+
+\- 浏览器端都有浏览器自动完成，我们无需操心
+
+\- 服务端可以通过拦截器统一实现，不必每次都去进行跨域判定的编写。
+
+事实上，`SpringMVC已经帮我们写好了CORS的跨域过滤器：CorsFilter `,内部已经实现了刚才所讲的判定逻辑，我们直接用就好了。
+
+```java
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
+
+@Configuration
+public class GlobalCorsConfig {
+    @Bean
+    public CorsFilter corsFilter() {
+        //1.添加CORS配置信息
+        CorsConfiguration config = new CorsConfiguration();
+        //1) 允许的域,不要写*，否则cookie就无法使用了
+        config.addAllowedOrigin("http://127.0.0.1:8081");
+        config.addAllowedOrigin("http://localhost:8081");
+        config.addAllowedOrigin("http://127.0.0.1:80");
+        config.addAllowedOrigin("http://localhost:80");
+        config.addAllowedOrigin("http://127.0.0.1");
+        config.addAllowedOrigin("http://localhost");
+
+
+        //2) 是否发送Cookie信息
+        config.setAllowCredentials(true);
+        //3) 允许的请求方式
+        config.addAllowedMethod("OPTIONS");
+        config.addAllowedMethod("HEAD");
+        config.addAllowedMethod("GET");
+        config.addAllowedMethod("PUT");
+        config.addAllowedMethod("POST");
+        config.addAllowedMethod("DELETE");
+        config.addAllowedMethod("PATCH");
+        // 4）允许的头信息
+        config.addAllowedHeader("*");
+        //2.添加映射路径，我们拦截一切请求
+        UrlBasedCorsConfigurationSource configSource = new
+                UrlBasedCorsConfigurationSource();
+        configSource.registerCorsConfiguration("/**", config);
+        //3.返回新的CorsFilter.
+        return new CorsFilter(configSource);
+    }
+}
+```
+
+#### 2.前台解决
+
+如果是前端开发，多个项目之间有相互访问的情况(只能在vue-cli的项目可以解决)。
+
+1. 在项目的config/index.js
+
+   ```javascript
+   proxyTable: {
+       '/api': {
+           target: 'http://localhost:8080',
+           changeOrigin: true,
+           pathRewrite: {
+               '^/api': '' //类似于nginx反向代理所有以api开头的访问
+           }
+       }, 
+   },
+   ```
+
+2. 在main.js中加入全局访问配置 为了不改变原来的访问，或者不需要每一次访问后台都要加上api
+
+   ```javascript
+   //配置axios的全局基本路径
+   axios.defaults.baseURL='/api
+   ```
+
+   
+
