postman提交文件记录踩坑

--- a/其他/踩坑.md
+++ b/其他/踩坑.md
@@ -33,3 +33,55 @@
 </dependency>
 ```
 
+## 2.PostMan模拟上传文件和参数
+
+今天我尝试使用Postman模拟文件跟参数一起上传的时候,尝试很多种只有这几种才可以:
+
+后端:
+
+```java
+    @PostMapping("/test")
+    public Department test(@RequestParam("file") MultipartFile file,@RequestParam String name){
+        System.out.println(file);
+        System.out.println(name);
+         return DepartmentService.selectDepartmentById(1L);
+    }
+```
+
+postman:
+
+![image-20211020140033428](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211020140033428.png)
+
+输出:
+![image-20211020140054785](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211020140054785.png)	
+
+> 还有一种方法就是将文件和参数一起放在一个对象里面去:
+
+后端:
+
+```java
+@PostMapping("/test")
+    public Department test(test test){
+        System.out.println(test);
+         return DepartmentService.selectDepartmentById(1L);
+    }
+@Data
+public class test {
+    private MultipartFile file;
+    private String name;
+}
+```
+
+postman:
+
+![image-20211020140402594](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211020140402594.png)
+
+输出:
+
+![image-20211020140428452](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211020140428452.png)
+
+> 总结:
+
+一旦文件和参数一起放在对象里面,那么我们使用注解`@RequestBody`就无法获取注入!只能将一个对象不加任何注解放在那里就可以接收!
+
+其他就不加解释了,多种方法我都尝试了!只有上述两种能够同时带上参数,并且也只有这个地方能够选择文件上传,其他碧如json是无法的!
