--- a/Redis/笔记.md
+++ b/Redis/笔记.md
@@ -241,6 +241,8 @@ Redis（**Re**mote **Di**ctionary **S**erver )，即远程字典服务!
 
 **总之**:它是免费和开源的!是当下最热门的NoSQL技术之一,也被人们称之为结构化数据库!
 
+Redis是以key-value形式存储,和传统的关系型数据库不一样,不一定遵循传统数据的一些基本要求,比如说:不遵循SQL标准,事务,表结构等等,redis严格上不是一种数据库,**应该是一种数据结构化存储方法的集合!**
+
 > Redis能干嘛?
 
 1. 内存存储、持久化，内存中是断电即失，所以持久化很重要（这里有两种机制:rdb,aof）
@@ -403,7 +405,7 @@ OK
 2. 清除当前数据库:**flushdb **
 
    ```bash
-   127.0.0.1:6379[3]> flushdb 
+   127.0.0.1:6379[3]> flushdb 			# 清除当前数据库
    OK
    127.0.0.1:6379[3]> keys *
    (empty list or set)
@@ -412,7 +414,7 @@ OK
 3. 清除全部数据库:**flushAll**
 
    ```bash
-   127.0.0.1:6379> select 1
+   127.0.0.1:6379> select 1				# 切换数据库
    OK
    127.0.0.1:6379[1]> set name MiaoDaWei
    OK
@@ -424,7 +426,7 @@ OK
    OK
    127.0.0.1:6379[2]> get kk
    "HowAreYou"
-   127.0.0.1:6379[1]> flushAll # 清除全部数据库
+   127.0.0.1:6379[1]> flushAll 			# 清除全部数据库
    OK
    (0.52s)
    127.0.0.1:6379[1]> get name
@@ -577,6 +579,14 @@ OK
 string
 127.0.0.1:6379> type age
 string
+127.0.0.1:6379> set key1 va1
+OK
+127.0.0.1:6379> get key1
+"va1"
+127.0.0.1:6379> del key1			# 删除key
+(integer) 1
+127.0.0.1:6379> get key1
+(nil)
 ```
 
 注意:我们在使用的时候,一般redis都会给出相应的提示,也就是所谓的帮助文档,比如我们写一个set,那么就会相应给出提示剩余该怎么写!
@@ -1822,6 +1832,12 @@ QUEUED
        <artifactId>fastjson</artifactId>
        <version>1.2.75</version>
    </dependency>
+   <!-- redis连接池 -->
+   <dependency>
+     <groupId>commons-pool</groupId>
+     <artifactId>commons-pool</artifactId>
+     <version>1.6</version>
+   </dependency>
    ```
 
 2. 编码测试:
@@ -2234,6 +2250,134 @@ public class TestTx {
 
 而我们后面实现乐观锁也是一样的,我们只需要加一个`jedis.watch(xxx)`即可!
 
+### 5.3 池化技术
+
+通过jedis连接池，简单操作redis数据库
+
+![image-20211024145000572](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211024145000572.png)
+
+
+
+```java
+//思想:如果创建一个对象后需要为他设置很多值,还不如先创建它配置对象并做完配置,然后再通过配置对象创建它
+//1 创建jedispool配置对象
+//2 做配置-四个
+//3 创建jedispool
+//4 通过jedispool获取连接
+//5 执行操作
+// 6 释放连接
+// 7 摧毁连接池-如果是真正项目中它应该是一个受spring管理的单例
+@Test
+public void test()throws Exception{
+    //1 创建jedispool配置对象
+    JedisPoolConfig config = new JedisPoolConfig();
+    //2 做配置-四个
+    config.setMaxIdle(2);
+    config.setMaxTotal(10);
+    config.setMaxWaitMillis(1*1000); //创建连接超时
+    config.setTestOnBorrow(true);//获取连接是测试连接是否畅通
+    //3 创建jedispool
+    //1*1000 获取连接超时时间
+    JedisPool pool = new JedisPool(config,
+            "127.0.0.1",6379,1*1000,"admin");
+    //4 通过jedispool获取连接
+    Jedis jedis = pool.getResource();
+    //5 执行操作
+    jedis.set("jedispooltest","dbldblddzt.....");
+    System.out.println(jedis.get("jedispooltest"));
+    // 6 释放连接
+    jedis.close(); //底层做了兼容,如果是连接池操作就是释放,如果是连接操作就是关闭
+    // 7 摧毁连接池-如果是真正项目中它应该是一个受spring管理的单例
+    pool.destroy();
+}
+```
+
+
+
+> 抽成工具类
+
+```java
+import redis.clients.jedis.Jedis;
+import redis.clients.jedis.JedisPool;
+import redis.clients.jedis.JedisPoolConfig;
+
+/**
+ * 整个单例： 枚举限制实例只有一个就是单例
+ */
+public enum  JedisUtil {
+    INSTANCE;
+    private static JedisPool pool = null;
+    static {
+        //1 创建连接池配置对象
+        JedisPoolConfig config = new JedisPoolConfig();
+        //2 对连接池配置对象进行配置
+        config.setMaxIdle(2);//最小连接数
+        config.setMaxTotal(10);//最大连接数
+        config.setMaxWaitMillis(2*1000);//超时时间
+        config.setTestOnBorrow(true);//测试连接是否畅通时机
+        //3 通过配置对象创建连接池对象 //正常来说应该配置到properties
+        pool = new JedisPool(config,"127.0.0.1",6379,2*1000,"123456");
+    }
+
+    //获取连接
+    public Jedis getResource(){
+        return pool.getResource();
+    }
+
+    //释放连接
+    public void release(Jedis jedis){
+        if (jedis != null) {
+            jedis.close();
+        }
+    }
+
+    //常用操作封装到里面 设置字符串 获取字符串 设置字符串并添加超时时间
+    public void set(String key,String val){
+        Jedis jedis = null;
+        try {
+            jedis = this.getResource();
+            jedis.set(key,val);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }finally {
+            this.release(jedis);
+        }
+
+    }
+    public void set(String key,String val,int seconds){
+        Jedis jedis = null;
+        try {
+            jedis = this.getResource();
+            //设置值时设置超时时间
+            jedis.setex(key,seconds,val);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }finally {
+            this.release(jedis);
+        }
+
+    }
+
+    public String get(String key){
+        Jedis jedis = null;
+        try {
+            jedis = this.getResource();
+            return jedis.get(key);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }finally {
+            this.release(jedis);
+        }
+
+        return null;
+    }
+}
+```
+
+
+
+
+
 ## 6.Redis.config
 
 这里是介绍Redis在启动的时候是如何进行启动的,而通过它的配置文件,我们来了解一下具体的使用:
@@ -2251,7 +2395,7 @@ public class TestTx {
 # it in the usual form of 1k 5GB 4M and so forth:
 # 这里是默认的一些单位设置!
 # 1k => 1000 bytes
-# 1kb => 1024 bytes
+# 1kb => 1024 bytes  这个只是一种称呼,真正用的还是1k
 # 1m => 1000000 bytes
 # 1mb => 1024*1024 bytes
 # 1g => 1000000000 bytes
@@ -2340,7 +2484,7 @@ dir ./								# rdb文件保存的目录!
 
 ```bash
 ################################## SECURITY ###################################
-requirepass 123456		# 设置redis密码,默认是为空,一般我们推荐使用命令行设置命令
+requirepass 123456		# 设置redis密码,默认是为空,一般我们推荐使用命令行设置命令,这里要注意就是前面不能有空格!
 ```
 
 密码的话我们也可以进行设置,当然默认为空,那我们在cmd中查看用户密码那如何查看呢?
@@ -2383,11 +2527,11 @@ OK
 # maxmemory <bytes>		# redis最大的内存容量
 ...
 # maxmemory-policy noeviction  # 内存达到上限之后的处理策略
-	1、volati1e-lru：只对设置了过期时间的key进行LRU（默认值）,把一些过期key进行移除!
-	2、allkeys-lru：删除lru算法的key;	删除移除算法的key
-	3、volatile-random：随机删除即将过期key; 
-	4、allkeys-random：随机删除
-	5、vo1atile-ttl：删除即将过期的
+	1、volati1e-lru：从已设置过期时间的数据集（server.db[i].expires）中挑选最近最少使用的数据淘汰
+	2. vo1atile-ttl：从已设置过期时间的数据集（server.db[i].expires）中挑选将要过期的数据淘汰
+	3、allkeys-lru：从所有数据集（server.db[i].dict）中挑选最近最少使用的数据淘汰
+	4、volatile-random：从已设置过期时间的数据集（server.db[i].expires）中任意选择数据淘汰
+	5、allkeys-random：从所有数据集（server.db[i].dict）中任意选择数据淘汰
 	6、noeviction：永不过期，返回错误
 ```
 
@@ -2607,6 +2751,10 @@ appendfsync everysec		# 每一秒钟都要去执行一次!
    - 如果Enable AOF,好处是在最恶劣情况下也只会丢失不超过两秒数据,启动脚本较简单只load自己的AOF文件就可以了,代价一是带来了持续的IO,二是AOF rewrite过程中产生的新数据写到新文件造成的阻塞几乎是不可避免的,只要硬盘许可,应该尽量减少AOF rewrite的频率,AOF重写的基础大小默认值46M太小了,可以设到5G以上,默认超过原大小100%大小重写可以改到适当的数值。
    - 如果不Enable AOF,仅靠Mster-Slave Repllcation(主从复制)实现高可用性可以,能省掉一大笔IO,也减少了rewrite时带来的系统波动,代价是如果Master/Slave(主机和从机)同时宕机(比如断电),会丢失十几分钟的数据,启动脚本也要比较两个Mster/Slave中的RDB文件,载入较新的那个(占用内存更大),微博就是这种架构.
 
+如果同时有RDB和AOF那么启动的时候:
+
+![image-20211024113356402](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211024113356402.png)
+
 ## 8.Redis发布订阅
 
 ### 8.1 概述
@@ -2766,6 +2914,10 @@ repl_backlog_histlen:0
 ![image-20211016155827271](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211016155827271.png)
 
 然后我们分别启动对应的客户端:
+
+```bash
+redis-cli -h ip地址 -p 端口号  # 当然我们可以省略掉-h ip地址,如果省掉就是默认为本机IP地址!
+```
 
 比如启动`redis-cli -p 6379`,这样就会针对客户端连接指定端口!
 
