--- a/其他/踩坑.md
+++ b/其他/踩坑.md
@@ -85,3 +85,5 @@ postman:
 一旦文件和参数一起放在对象里面,那么我们使用注解`@RequestBody`就无法获取注入!只能将一个对象不加任何注解放在那里就可以接收!
 
 其他就不加解释了,多种方法我都尝试了!只有上述两种能够同时带上参数,并且也只有这个地方能够选择文件上传,其他碧如json是无法的!
+
+> 注意我们上传文件还可以加上注解@RequestPart表示上传文件!
