yaml文件注入问题记录

--- a/spring Boot/简述和相关原理.md
+++ b/spring Boot/简述和相关原理.md
@@ -939,6 +939,43 @@ name: miaowei${random.uuid} # 随机uuid
 
    
 
+> 这里记录一下对于Yaml文件注入到字符串
+
+yaml:
+
+```yaml
+spring:
+  # 邮件配置
+  mail:
+  	username: miaodawei8721@foxmail.com
+```
+
+测试类:
+
+```java
+@SpringBootTest
+class BackstageProjectApplicationTests {
+    @Value("#{'${spring.mail.username}'}")  //第一种方式
+   // @Value("${spring.mail.username}")		第二种方式
+    private String username;
+    
+    @Test
+    public void send() {
+        System.out.println(username);
+    }
+}
+```
+
+输出:
+
+![image-20211028180237435](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211028180237435.png)
+
+**注意**:注入的字符串不能是静态类型的!也就是说不能有static修饰的!
+
+**踩坑**:如果注入的类本身注入到了容器,而我们想要快速的测试使用正常使用,那么记住不能直接new去调用方法去使用,而是用Spring的方式用@Autowired进行注入获取!否则一直都是null!
+
+这是相关链接:https://www.tqwba.com/x_d/jishu/262058.html
+
 ### 5.4 加载位置
 
 外部加载配置文件的方式十分多,我们选择最常用的即可:
@@ -1244,6 +1281,27 @@ spring:
 ```
 
 **注意**:如果yml和properties同时都配置了端口,并且没有激活其他环境,那么默认是会使用properties配置文件的!
+
+> 这里记录一下一个配置文件引入另外一个配置文件
+
+如果同一个环境有多个配置文件，可以通过**spirng.profiles.include**实现多配置文件
+
+**注意**:这里导入的名字是application-xxx.yaml中的xxx
+
+如:
+
+```yaml
+application.yaml
+spring:
+	profiles:
+		include: druid
+		
+application-druid.yaml
+```
+
+这里配上详细链接:https://blog.csdn.net/xiaorui51/article/details/108452181
+
+
 
 ## 8.web资源源码解析
 
