接收参数使用Map来进行处理

--- a/其他/常用.md
+++ b/其他/常用.md
@@ -48,3 +48,17 @@ data.put("fileName","xxxx")//这种写法虽然也可以但还是再精简
 
 
 
+## 4.Map接收参数
+
+我们在接收参数的时候如果有的时候使用post请求,然后请求才只有一个参数,现在用一个类去接收,反而有点冗余浪费的感觉,那么可以用Map来接收!
+
+```java
+@PostMapping("/test")
+public Map<String, Object> test(@RequestBody Map<String, Object> map) {
+    return map;
+}
+```
+
+![image-20211028183321118](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211028183321118.png)
+
+> 无论是使用@RequestParam来接收也是一样的,也就是说请求过来的数据是可以用Map来绑定!
