--- a/spring Boot/任务调度.md
+++ b/spring Boot/任务调度.md
@@ -389,3 +389,19 @@ JavaMailSenderImpl sender;
 > 复杂的邮件就是各种附件啊等等之类的!
 
 那么可以说我们只需要使用Thymeleaf进行前后端结合即可开发自己网站邮件收发功能了！
+
+
+
+> 记录一下用yaml配置:
+
+```yaml
+spring:
+  # 邮件配置
+  mail:
+    host: smtp.qq.com # 运营商
+    username: miaodawei8721@foxmail.com # 邮箱
+    password: rutyrfcstavrdjaj # 授权码
+```
+
+**注意**:在发送邮件的时候发送者要跟这里username保持一致,否则会报错!
+
