--- a/其他/项目二所用技术.md
+++ b/其他/项目二所用技术.md
@@ -254,3 +254,192 @@ live-server --port=80
 
 ![image-20211029180035016](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211029180035016.png)
 
+## 3.三方登录
+
+三方登录顾名思义就是使用第三方主流平台如:微信、QQ、支付宝等等;这样的好处就是免于我们繁杂的注册流程!
+
+> 三方登录协议-OAuth2.0
+
+`OAUTH协议为用户资源的授权提供了一个安全的、开放而又简易的标准`。与以往的授权方式不同之处是`OAUTH的授权不会使第三方触及到用户的帐号信息（如用户名与密码）`,即第三方无需使用用户的用户名与密码就可以申请获得该用户资源的授权，因此OAUTH是安全的。oAuth是Open Authorization的简写，目前的版本是2.0版。
+
+![img](https://gitee.com/miawei/pic-go-img/raw/master/imgs/wpsB55A.tmp.jpg)
+
+这是官网地址:https://oauth.net/2/
+
+理解:使用这种协议的好处就是不会去触及第三方用户的隐私性信息,如:密码等隐私性较高的东西!只会进行授权的操作拿到一些我们能够看见的东西
+
+> OAuth的思路
+
+​	OAuth在"客户端"与"服务提供商"之间，设置了一个`授权层`（authorization layer）。"客户端"不能直接登录"服务提供商"，只能登录授权层，以此将用户与客户端区分开来。"客户端"登录授权层使用的是令牌（token），与用户的密码不同。用户可以在登录的时候，指定令牌的权限范围和有效期。
+
+"客户端"登录授权层以后，"服务提供商"根据令牌的权限范围和有效期，向"客户端"开放用户储存的资料。
+
+> 运行流程
+
+![image-20211101154816858](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211101154816858.png)
+
+步骤:
+
+1. A: 用户打开客户端以后,客户端要求用户给予授权;
+2. B: 用户同意给予客户端授权
+3. C: 客户端使用上一步获取的授权,向认证服务器申请令牌,
+4. D: 认证服务器对客户端进行认证以后,确认无误,同意发放令牌
+5. E: 客户端使用令牌,向资源服务器申请获取资源
+6. F: 资源服务器确认令牌无误,同意向客户端开放资源;
+
+其实总的来说`token`是一个关键的东西,结合OAuth的思路来进行思考:客户端会首先发起一个授权界面,一旦用户同意了授权那么就可以申请获取token令牌,拿到token令牌以后就表示登录到客户端与服务提供商之间的`授权层`,而到了这一层,我们就可以根据令牌向服务提供商申请想要的资源,如:用户个人信息,服务提供商拿到这个令牌确认可以就开放对应的资源!
+
+其实再缩减就是这三个步骤:**用户授权**、**获取令牌**、**访问受限资源**
+
+**注意**：在上述六个步骤中，B是关键，因为用户无论怎样只要给客户端授权，客户端才能根据这个授权去获取令牌，进而凭借令牌来获取资源！
+
+> 客户端授权-授权码模式
+
+客户端必须得到用户的授权，才能获取令牌，那么OAuth定义了四种授权方式：
+
+- 授权码模式
+- 简化模式
+  - 拿到授权二维码就可以直接放行
+- 密码模式
+  - 在获取的资源那里设置密码,所以不需要拿到授权和token就可以直接进入
+- 客户端模式
+  - 直接进我们想要的资源,根本不需要token和授权
+
+这里主要介绍第一种方式:`授权码模式`
+
+​	`授权模式是功能最完整、流程最严密的授权模式`,它的特点就是通过客户端的后台服务器与"服务提供商"的认证服务器进行互动,来看下一张图:
+
+![image-20211101162020098](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211101162020098.png)
+
+流程:
+
+A: 用户访问客户端,后者将前者导向认证服务器
+
+B: 用户选择是否给予客户端授权
+
+C: 假设用户给予授权,认证服务器将用户导向客户端实线指定的：“重定向URI”，同时附上一个授权码
+
+D：客户端收到授权码，附上早先的"重定向URI",向认证服务器申请令牌。这一步是在客户端的后台服务器上完成的，对用户不可见。
+
+E：认证服务器核对了授权码和重定向URI，确认无误后，向客户端发送访问令牌（access_token）和更新令牌(refresh_token)
+
+> 网站微信登录原理
+
+这是官方给出的文档:https://developers.weixin.qq.com/doc/oplatform/Mobile_App/WeChat_Login/Development_Guide.html
+
+这是一个过程:
+
+![image-20211101163030290](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211101163030290.png)
+
+> 核心代码实现:
+
+步骤:
+
+1. 用户点击第三方微信登录按钮,获取code授权码
+
+   ```html
+   <li><a href="https://open.weixin.qq.com/connect/qrconnect?appid=wxd853562a0548a7d0&redirect_uri=http://bugtracker.itsource.cn/callback.html&response_type=code&scope=snsapi_login&state=3#wechat_redirect"><i class="am-icon-weixin am-icon-sm"></i><span>微信登录</span> </a></li>
+   ```
+
+   ![image-20211101163547412](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211101163547412.png)
+
+   ​	其中`redirect_uri`表示的重定向的地址,微信第三方通过appid会返回一个授权二维码,需要用户扫码进行确认是否进行授权操作!
+
+2. 跳转到重定向页面,此时http地址后跟着指定参数`code`,表示我们已经拿到了授权码了
+
+   ```javascript
+   mounted() {
+       //注:本页面是回调页面,也就是说在login页面发起微信登录然后通过参数appid或回调重定向页面到本页面
+       //回调到本页面会带1个参数: code授权码
+       //解析参数上
+       let url = location.href; // http://bugtracker.itsource.cn/callback.html?code=051p2m100kZ6GM1ge7100yhviD4p2m1m&state=3
+   
+       //  根据url生成对象
+       let paramObj = parseUrlParams2Obj(url);
+   
+       //   let binderUrl="http://bugtracker.itsource.cn/binder.html";
+       //封装请求参数
+       let param = {"code": paramObj.code};
+       // 发送请求
+       this.$http.post("/user/wechat", param)
+           .then(result => {
+           //200表示免密登录成功
+           if (result.data.code===200) {
+               // 把用户信心保存到localStorage
+               // alert("登录成功");
+               //1.将token和登录信息存入localStorage
+               let {token, loginfo} = result.data.data;
+               localStorage.setItem("token", token);
+               localStorage.setItem("loginInfo", JSON.stringify(loginfo));
+               //2.跳转到首页，并显示登录信息
+               location.href = "index.html";
+           }else if(result.data.code===204){
+               //其他信息表示是第一次登录那么应跳转到绑定页面
+               //1.获取的openID和access_token放入localStorage
+               let {access_token,openid} = result.data.data;
+               localStorage.setItem("openid",openid );
+               localStorage.setItem("access_token", access_token);
+               //2.跳转到绑定界面
+               location.href = "binder.html";
+           }
+       }) 
+     }
+   ```
+
+3. 发起异步请求,将获取的授权码(code)通过后端服务器进行发起get请求获取到token令牌,登录到授权层
+
+   ```java
+   String WXCHAT_TOKEN_BY_CODE = "https://api.weixin.qq.com/sns/oauth2/access_token?appid={}&secret={}&code={}&grant_type=authorization_code";
+   private String appid=wxd853562a0548a7d0;
+   private String secret=4a5d5615f93f24bdba2ba8534642dbb6;
+   
+   @Override
+   public AjaxResult loginWeChat(Map<String, String> map) {
+       String response = HttpUtil.get(CharSequenceUtil.format(WXCHAT_TOKEN_BY_CODE, appid, secret, code));
+   	...
+        //其他业务   
+   }
+   
+   ```
+
+   在官方也有阐释:
+
+   ![image-20211101164722343](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211101164722343.png)
+
+   通过这个我们就可以获取到token,就可以进入OAuth思路中客户端和服务提供商之间的"授权层",通过这个授权层我们就可以拿到我想要的对应的资源
+
+4. 通过token令牌我们可以获取到指定的用户信息:
+
+   ```java
+   /**
+   	* 微信获取用户个人信息
+   */
+   String WXCHAT_ACCESS_TOKEN = "https://api.weixin.qq.com/sns/userinfo?access_token={}&openid={}";
+   
+   public AjaxResult binderWxChat(BinderWeChatDto dto) {
+       //这里token和openid都是上面获取到的
+       String response = HttpUtil.get(CharSequenceUtil.format(WXCHAT_ACCESS_TOKEN, dto.getAccessToken(), dto.getOpenId())); 
+   }
+   ```
+
+   官方这里简述:
+
+   ![image-20211101165253027](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211101165253027.png)
+
+> 总的流程就是这样,就没有了
+
+其实使用微信三方登录无非就三步:
+
+1. 发起链接地址出现授权二维码让用户进行授权操作
+2. 授权成功重定向指定页面拿到授权码code
+3. 发起请求到后端服务器通过code获取到token
+4. 通过token获取到用户个人信息!
+
+> 注意:因为这个第三方登录需要300人民币才有资获取,所以这是使用源码的,而源码在注册的时候绑定了端口为80,所以我们必须也要启动端口为80,并且重定向是从服务器商进行重定向,所以我们的项目映射为公网才可以,因为是微信平台进行重定向所以我们需要将本地IP转为域名的方式,才能找得到!如果不改的话那么我们重定向12.0.0.1就会重定向到第三方平台的本机!
+
+我们可以将当前ip进行封装为公网地址,在hosts文件修改:
+
+![image-20211101171503950](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211101171503950.png)
+
+![image-20211101171605627](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211101171605627.png)
+
