--- a/其他/记录.md
+++ b/其他/记录.md
@@ -139,13 +139,13 @@ session往往跟Cokkie一起搭配使用,比较依赖于cookie里面的jessionid
 
 ![image-20211101144519464](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211101144519464.png)
 
-**理解**:用户访问网站,如果是第一次登录那么就会创建一个cookie并将服务器创建好的session信息通过一个jessionid进行写入并进行保存到客户端的浏览器总,下一次访问的时候就可以携带cookie中的jessionID到服务器端进判断是否存在或有效,来决定是否登录!
+**理解**:用户访问网站,如果是第一次登录那么就会创建一个cookie并将服务器创建好的session信息通过一个jessionid进行写入并进行保存到客户端的浏览器总,下一次访问的时候就可以携带cookie中的jessionID到服务器端查找session进而判断是否存在或有效,来决定是否登录!
 
 **注意:**cookie是服务器端创建然后保存到浏览器的,session是一种会话技术!
 
 **缺点:**
 
-1. 随着项目不断演进,存放在服务器端的session就会变得庞大,占用一定的资源
+1. 随着项目不断演进,存放在服务器端的session就会变得庞大,占用一定的资源,服务器性能降低
 2. cookie+session不支持APP环境,因为APP里面压根就没有cookie
 3. cookie是存储在客户端,安全性较低,若清除cookie那么登录信息也就没有了!
 
