前端传参和后台接收问题

--- a/其他/常用.md
+++ b/其他/常用.md
@@ -62,3 +62,9 @@ public Map<String, Object> test(@RequestBody Map<String, Object> map) {
 ![image-20211028183321118](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211028183321118.png)
 
 > 无论是使用@RequestParam来接收也是一样的,也就是说请求过来的数据是可以用Map来绑定!
+
+> 在后端接收的时候,如果没有传json结构的数据,可以直接用数据类型进行接收,但是如果是json进行传参那么就得用@RequestBody,当然仅限于PostMapping使用@RequestBody!
+
+没传json结构:前端传[1,2],那么后端就可以直接用List<Integer> aa就可以接收
+
+传json结构:前端传{[1,2]},那么后端就可以用@Requestbody List<Integer>来接收
