三方支付原理理解

--- a/其他/项目二所用技术.md
+++ b/其他/项目二所用技术.md
@@ -740,3 +740,40 @@ public class DistanceUtil {
 }
 ```
 
+## 6. 订单流程(三方支付-支付宝)
+
+### 6.1 订单流程
+
+这是一个大概的流程图:
+
+![1620963078374](https://gitee.com/miawei/pic-go-img/raw/master/imgs/1620963078374.png)
+
+业务流程:
+
+​	首先商家上架宠物,然后用户在宠物列表进行选购,通过商品的详情页面进行一个购买下单的操作,而在后台通过下单的请求参数进行相关的保存订单信息!
+
+### 6.2 三方支付的原理
+
+这是一个总的支付流程:
+
+![image-20211106163442703](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211106163442703.png)
+
+**理解**:用户通过订单详情页点击立即购买,这时就会立即发起一个下单请求到后台去,后台接收请求参数进行下单的保存并冻结相关的相关商品。同时将需要第三方支付需要的流水参数所在的支付单的表也进行一个保存，然后操作成功后就会返回一个支付单号，前台页面返回收到操作成功的标志后就会发起一个支付的申请，后台会根据刚刚保存的支付单进行向第三方支付接口进行发起支付，等待支付成功后，就会有两个回调结果，第一个回调是异步回调，这步是将调用后台接口进行支付结果进行相关业务的处理，如：修改订单的状态和保存支付的流水等等。同时还要一个同步回调，这个同步回调是第三方支付是支付结束后重定向到我们刚刚支付的页面，用于告诉客户端用户已经支付成功了！
+
+注意:其实可以将保存订单放在支付业务那里去操作,但是为了一个分离服务更具有独立性的概念思想,因为支付有不同的场景,每个场景保存订单的参数都是可能不一样的,所以这里就将其抽出来,在支付业务中只需要获取订单号进行查询就可以发起第三方支付,这种要更具有健壮性!
+
+> 要注意无论支付成功还是失败，都有两次回调，一次异步一次同步
+
+支付场景：
+
+- 下单支付【用户 -> 平台】：普通用户购买某产品，在线支付 ： 用户账户(银行，支付宝，微信) -> 平台账户
+- 账户充值【用户 -> 平台】：普通用户在平台充值，把银行卡,支付宝，微信中的只是金额充值到平台账户中(虚拟账户，在平台只是一个数字而已)
+- 账户提现【平台 -> 用户】：普通用户要把平台账户余额中的钱提取到银行卡，支付宝，微信 ，发起提现申请
+
+支付理解：
+
+![1620992844833](https://gitee.com/miawei/pic-go-img/raw/master/imgs/1620992844833.png)
+
+**理解**：初期最早支付是银行才有的权利后面将支付的权利进行挂牌售卖，但所需金钱过于庞大所以一般很少有公司能买得起但是像支付宝微信这些有实力进行购买了这种支付牌照就可以通过支付去直接将银行用户账户的钱进行操作，但是现在是有价无市并且我们平台无法直接对接银行进行转账的操作，所以我们需要通过这些第三方支付提供的接口进行相关的支付操作，那么这第三方支付网关是如何进行转账的操作的呢？首先商家需要在第三方支付上开通一个账户，用户呢也需要登录到第三方支付的账户上，这样就同时有商家和用户的账户，当用户进行扫码付款的时候，钱就会直接转账到商家的账户上，但同时也有另外一种模式就是钱会先扫给平台，然后由平台赚差价再转商家账户上！但是要注意转账是要通过第三方支付网关对接银行进行转账的操作，通过银行的操作的回调结果是成功还是失败决定了平台用户的支付结果，并且也要记住这个转账操作是具有原子性的！
+
+> 理解的核心点就是三方支付就是我们对接银行的中间商,我们支付需要商家和用户登录三方支付平台账户才能有权进行转账操作!
